--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,22 +15,31 @@
 </head>
 
   <body>
-
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+<nav class='navbar'>
+  <a href="#"> Services </a>
+  <a href="#"> Product </a>
+  <a href="#"> Vision </a>
+  <a href="#"> Features </a>
+  <a href="#"> About </a>
+  <a href="#"> Contact </a>
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
 
-  Get Started
+</nav>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+<section>
+
+    <h1>
+    Innovation
+    On
+    Demand
+    </h1>
+
+  <div class="button"> Get Started </div>
+
+  <img class="logo2"src="img/header-img.png" alt="Image of a code snippet.">
+
+</section>
 
   Features
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
