--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,31 +15,31 @@
 </head>
 
   <body>
-<nav class='navbar'>
+<nav>
   <a href="#"> Services </a>
   <a href="#"> Product </a>
   <a href="#"> Vision </a>
   <a href="#"> Features </a>
   <a href="#"> About </a>
   <a href="#"> Contact </a>
+  <a href="#" class="logo"></a>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
 </nav>
 
-<section>
+<header>
 
-    <h1>
-    Innovation
-    On
+    <h1 class="logo2">
+    Innovation <br>
+    On <br>
     Demand
     </h1>
 
   <div class="button"> Get Started </div>
 
-  <img class="logo2"src="img/header-img.png" alt="Image of a code snippet.">
+  <img class="headerpic"src="img/header-img.png" alt="Image of a code snippet.">
 
-</section>
+  </header>
 
   Features
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
