--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,7 +15,6 @@
   <![endif]-->
 </head>
 
-  <body>
 <nav>
   <a href="#"> Services </a>
   <a href="#"> Product </a>
@@ -27,46 +27,97 @@
 
 </nav>
 
-<header>
 
-    <h1 class="logo2">
-    Innovation <br>
-    On <br>
-    Demand
+<body>
+
+  <header>
+
+    <img class="logo" src="img/logo.png">
+
+    <h1 id="IOD">
+      Innovation <br>
+      On <br>
+      Demand
     </h1>
 
-  <div class="button"> Get Started </div>
+    <a href="#">
+      <button class="button"> Get Started </button>
+    </a>
 
-  <img class="headerpic"src="img/header-img.png" alt="Image of a code snippet.">
 
   </header>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <img class="headerpic" src="img/header-img.png" alt="Image of a code snippet.">
 
+  <hr>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section>
+
+    <div class="push1">
+    <h6>Features</h6>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. <br>
+      Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. <br>
+      Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
+
+    <div class="push2">
+    <h6>About</h6>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. <br>
+      Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. <br>
+      Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
+
+  </section>
+
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
+    <section id="section2">
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <div class="push3">
+    <h6>Services</h6>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. <br>
+      Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. <br>
+      Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
+    
+    <div>
+    <h6>Product</h6>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. <br>
+      Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. <br>
+      Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <div>
+    <h6>Vision</h6>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. <br>
+      Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. <br>
+      Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+  </section>
 
-  Copyright Great Idea! 2018
-  
-  </body>
+  <hr>
+
+  <section class="contact">
+      <h6> Contact </h6> <br> <br>
+      123 Way 456 Street <br>
+      Somewhere, USA <br> <br>
+      1 (888) 888-8888 <br> <br>
+      sales@greatidea.io
+  </section>
+
+  <footer>
+
+      <p> Copyright Great Idea! 2018 </p>
+
+  </footer>
+
+</body>
+
 </html>
